solve--color-contrast

--- a/scss/books.scss
+++ b/scss/books.scss
@@ -36,11 +36,12 @@ article {
   border-radius: 4px;
 
   &:hover {
-    border-color: $background-light;
+    border-color: $secondary-color;
     border-width: 0.2rem;
 
     .book__title {
       background-color: $background-light;
+      color: $primary-color;
     }
   }
 }
